--- a/Ejercicio CSS/tienda.html
+++ b/Ejercicio CSS/tienda.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+
 <html>
 <head>
+	<link rel="stylesheet" href="styles.css">
 	<link type="text/css" rel="stylesheet" href="styles.css" />
 	<title>Tiendas Pav</title>
 </head>
