--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   </head>
   <body>
     <h1>Trabajo Practico N2 CSS & Boostrap</h1>
-    <a href="Ejercicio CSS\tienda.html">Ejercicio 1 - Tienda CSS</a> <br />
+    <a href="EjercicioCSS\tienda.html">Ejercicio 1 - Tienda CSS</a> <br />
     <a href="EjercicioGrillaBootstrap\EjercicioGrilla.html"
       >Ejercicio 2 - Grillas en Bootstrap</a
     ><br />
     <a href="EjercicioBootstrap\tienda_bootstrap.html"
       >Ejercicio 3 - Tienda Bootstrap</a
-    ><br><br>
+    ><br /><br />
 
-    <a href="https://github.com/JuanDonalisio/pav2-2022-tp2-79420-donalisio-juan-pablo">Link a repositorio en Github</a>
+    <a
+      href="https://github.com/JuanDonalisio/pav2-2022-tp2-79420-donalisio-juan-pablo"
+      >Link a repositorio en Github</a
+    >
   </body>
 </html>
